fi: postgres protocol
Fixed issue #668

(cherry picked from commit bd2df8821b197ffa44d8457167013c3782d3f570)